Ignore client abort

--- a/manifest/etc/nginx/nginx.conf
+++ b/manifest/etc/nginx/nginx.conf
@@ -25,6 +25,8 @@ http {
                           '$status $body_bytes_sent "$http_referer" '
                           '"$http_user_agent" "$http_x_forwarded_for"';
 
+    proxy_ignore_client_abort on;
+
 
     access_log /dev/stdout main;
 
