--- a/manifest/etc/nginx/conf.d/default.conf
+++ b/manifest/etc/nginx/conf.d/default.conf
@@ -31,6 +31,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
+        fastcgi_ignore_client_abort on;
         include fastcgi_params;
         fastcgi_hide_header x-powered-by;
     }
